Feat : Working scripts to fetch tweets added * ipython notebook updated

--- a/fetch_tweets.ipynb
+++ b/fetch_tweets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -60,15 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/deepak_garg/.local/lib/python2.7/site-packages/requests/packages/urllib3/util/ssl_.py:132: InsecurePlatformWarning: A true SSLContext object is not available. This prevents urllib3 from configuring SSL appropriately and may cause certain SSL connections to fail. You can upgrade to a newer version of Python to solve this. For more information, see https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
+      "  InsecurePlatformWarning\n",
       "/home/deepak_garg/.local/lib/python2.7/site-packages/requests/packages/urllib3/util/ssl_.py:132: InsecurePlatformWarning: A true SSLContext object is not available. This prevents urllib3 from configuring SSL appropriately and may cause certain SSL connections to fail. You can upgrade to a newer version of Python to solve this. For more information, see https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
       "  InsecurePlatformWarning\n"
      ]
@@ -77,19 +81,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RT @realresults101: Why businesses need to invest more in consumer apps. #Custserve https://t.co/jZZIiYZkn6\n",
-      "Why businesses need to invest more in consumer apps. #Custserve https://t.co/jZZIiYZkn6\n",
-      "RT @jamestownsend: What Every CEO Should Know About Customer Service and the Customer Experience via @TriciaEMorris #custserve  https://t.c…\n",
-      "RT @CarolynBlunt: What’s the benchmark for a great customer experience? #Custserve? https://t.co/HKBrvvGuZ1\n",
-      "What Every CEO Should Know About Customer Service and the Customer Experience via @TriciaEMorris #custserve  https://t.co/TRvSS3T5bq\n",
-      "What’s the benchmark for a great customer experience? #Custserve? https://t.co/HKBrvvGuZ1\n",
-      "6\n"
+      "cookie33uk : 835448511739084801\n",
+      "CarolynBlunt : 835448062675935232\n",
+      "emberservices : 834675930413031424\n",
+      "realresults101 : 834654108380454912\n",
+      "Fabrice_Briatte : 834597338832216065\n",
+      "emberservices : 834425358313222144\n",
+      "jamestownsend : 834411954638880768\n",
+      "CarolynBlunt : 834329432236097536\n",
+      "wambipaul : 833688048760127489\n",
+      "realemailmkting : 833274833307893761\n",
+      "CarolynBlunt : 833228487179849729\n",
+      "JamesMills120 : 833019997697998848\n",
+      "DanKielyVoxpro : 832904436200701954\n",
+      "custservstory : 832865123962388480\n",
+      "IWantItNowblog : 832864230869258240\n",
+      "CurationSuite : 832846701404774401\n",
+      "jamestownsend : 832816913155764225\n",
+      "emberservices : 832158613661708288\n",
+      "realresults101 : 832118616246063105\n",
+      "[u'835448511739084801', u'835448062675935232', u'834675930413031424', u'834654108380454912', u'834597338832216065', u'834425358313222144', u'834411954638880768', u'834329432236097536', u'833688048760127489', u'833274833307893761', u'833228487179849729', u'833019997697998848', u'832904436200701954', u'832865123962388480', u'832864230869258240', u'832846701404774401', u'832816913155764225', u'832158613661708288', u'832118616246063105']\n"
      ]
     }
    ],
    "source": [
     "query = '%23custserve'\n",
-    "max_tweets = 10\n",
+    "max_tweets = 100\n",
     "searched_tweets = []\n",
     "last_id = -1\n",
     "while len(searched_tweets) < max_tweets:\n",
@@ -109,10 +126,10 @@
     "mytweets=[]\n",
     "for tweet in searched_tweets:\n",
     "    if(tweet.retweet_count >0):\n",
-    "        mytweets.append(tweet)\n",
-    "        print tweet.text\n",
+    "        mytweets.append(tweet.id_str)\n",
+    "        print tweet.user.screen_name+ \" : \"+ tweet.id_str\n",
     "        \n",
-    "print len(mytweets)"
+    "print mytweets"
    ]
   },
   {
@@ -156,6 +173,70 @@
     "twitterStream = Stream(auth, streamListener)\n",
     "#twitterStream.userstream(_with='user')\n",
     "#twitterStream.filter(track=['python'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import Tkinter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyFirstGUI:\n",
+    "    \n",
+    "    tweets=[]\n",
+    "    \n",
+    "    def __init__(self, master):\n",
+    "        self.master = master\n",
+    "        master.title(\"Fetch my tweets\")\n",
+    "        \n",
+    "        self.greet_button = Button(master, text=\"Refresh\", command=self.greet)\n",
+    "        self.greet_button.pack()\n",
+    "        \n",
+    "        scrollbar = Scrollbar(master)\n",
+    "        scrollbar.pack(side=RIGHT, fill=Y)\n",
+    "\n",
+    "        listbox = Listbox(master, yscrollcommand=scrollbar.set)\n",
+    "        for i in range(1000):\n",
+    "            listbox.insert(END, str(i))\n",
+    "        listbox.pack(expand=YES,fill=BOTH)\n",
+    "        listbox.bind('<Double-1>', self.clickme)\n",
+    "        scrollbar.config(command=listbox.yview)\n",
+    "        \n",
+    "    def clickme(self,event):\n",
+    "        print \"hi\"\n",
+    "\n",
+    "    def greet(self):\n",
+    "        print(\"Greetings!\")\n",
+    "\n",
+    "root = Tk()\n",
+    "my_gui = MyFirstGUI(root)\n",
+    "root.mainloop()"
    ]
   },
   {
